--- a/branches/dev_remove_jmu/RuntimeLibrary/Makefile.in
+++ b/branches/dev_remove_jmu/RuntimeLibrary/Makefile.in
@@ -187,7 +187,6 @@ includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
 ipoptlib = @ipoptlib@
-jmi_cppadlib = @jmi_cppadlib@
 jmilib = @jmilib@
 libdir = @libdir@
 libexecdir = @libexecdir@
@@ -224,9 +223,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign RuntimeLibrary/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu RuntimeLibrary/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign RuntimeLibrary/Makefile
+	  $(AUTOMAKE) --gnu RuntimeLibrary/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
