#4167 branch:dev_remove_jmu Fixed build problems introduced in r9773, missed some references to JMI folder. Removed JMU compilation target and code generation in compiler. Cleaned up some old seemingly unused stuff in root folder.

--- a/branches/dev_remove_jmu/Python/src/pyjmi/examples/files/Resources/CMakeLists.txt
+++ b/branches/dev_remove_jmu/Python/src/pyjmi/examples/files/Resources/CMakeLists.txt
@@ -30,7 +30,7 @@ set(TEST_LIBRARY_INSTALL_DIR ${JMODELICA_INSTALL_DIR}/Python/pyjmi/examples/file
 install(CODE "file(MAKE_DIRECTORY  $ENV{DESTDIR}${TEST_LIBRARY_INSTALL_DIR})")
 
 include_directories(Include)
-include_directories(${TOP_SRC}/JMI/src)
+include_directories(${TOP_SRC}/RuntimeLibrary/src/jmi)
 
 set(ADDNUMBERS_Sources
     src/addNumbers.c
