--- a/branches/dev_remove_jmu/RuntimeLibrary/Makefiles/Makefile.linux
+++ b/branches/dev_remove_jmu/RuntimeLibrary/Makefiles/Makefile.linux
@@ -29,10 +29,6 @@
 #   JMODELICA_HOME        (mandatory) The directory where JModelica has been built,
 #                         or equivalently, the directory of a binary JModelica
 #                         distribution.
-#   CPPAD_HOME            (mandatory) The directory of CppAD.
-#                         IPOPT interface is built.
-#   IPOPT_HOME            (mandatory if BUILD_WITH_ALGORITHMS=true) An IPOPT build
-#                         directory.
 #   SUNDIALS_HOME         (mandatory) The directory of Sundials.
 #   EXT_LIB_DIRS          List of external library directories.
 #   EXT_LIBS              List of external libraries.
@@ -41,8 +37,6 @@
 #                         Format is (with e1.c and e2.c) "e1:O2:pedantic e2:O1"
 #
 # The following targets are supported:
-#    jmu          Build a shared object file including the low level JMI interface 
-#                 (contained in jmi.a), JMI algorithms and the Ipopt algorithm.
 #    fmume10      Build a shared object file containing the generated code and the
 #                 Model Exchange for API FMI 1.0.
 #    fmucs10      Build a shared object file containing the generated code and the
@@ -55,11 +49,9 @@
 #                 Model Exchange API and co-simulation API for FMI 2.0.
 #        
 # Example:
-#  make -f Makefile.linux ipopt \
+#  make -f Makefile.linux linux32 \
 #    FILE_NAME=CCodeGenTests.CCodeGenTest1 \
 #    JMODELICA_HOME=/home/jakesson/projects/JModelica/build \
-#    CPPAD_HOME=/home/jakesson/packages/cppad-20081116/ \
-#    IPOPT_HOME=/home/jakesson/packages/Ipopt/3.5.4/build
 #
 
 # Name of shared library
@@ -74,12 +66,6 @@ PLATFORM =
 # JModelica home
 JMODELICA_HOME = 
 
-# CPPAD home
-CPPAD_HOME = 
-
-# IPOPT home
-IPOPT_HOME = 
-
 # SUNDIALS home
 SUNDIALS_HOME =
 
@@ -92,9 +78,6 @@ EXTERNAL_LIBS = $(EXT_LIBS:%=-l%) -llapack -lblas -lgfortran
 
 # Additional include directories
 EXT_INC_DIRS =
-
-# Build with algorithms (requires IPOPT)
-BUILD_WITH_ALGORITHMS = false
 
 # Directory to place binary in
 BINARY_BASE_DIR = binaries
@@ -112,19 +95,12 @@ CXX = g++
 # C Compiler command
 CC = gcc
 
-# Compile with or without CppAD
-JMI_AD=JMI_AD_CPPAD
-
 # Flags for which FMU type, me, cs or me+cs.
 FMU_TYPES =
 
-# C++ Compiler options
-CXXFLAGS = -g
-CXXFLAGS += -DJMI_AD=${JMI_AD} -fPIC
-
 # C Compiler options
 CFLAGS = -g
-CFLAGS += -std=c89 -pedantic -DJMI_AD=$(JMI_AD) ${FMU_TYPES} -fPIC -msse2 -mfpmath=sse
+CFLAGS += -std=c89 -pedantic ${FMU_TYPES} -fPIC -msse2 -mfpmath=sse
 
 SHARED_LDFLAGS = -shared -Wl,-rpath,'$$ORIGIN',--no-undefined -pthread
 
@@ -132,7 +108,6 @@ SHARED_LDFLAGS = -shared -Wl,-rpath,'$$ORIGIN',--no-undefined -pthread
 JMI_INC_DIR = ${JMODELICA_HOME}/include
 RUNTIMELIBRARY_INC_DIR = ${JMODELICA_HOME}/include/RuntimeLibrary
 STANDARD_HEADER_INC_DIR = ${JMODELICA_HOME}/ThirdParty/FMI/2.0
-CPPAD_INC_DIR = $(CPPAD_HOME)
 SUNDIALS_INC_DIR = $(SUNDIALS_HOME)/include
 
 # Directories with libraries
@@ -148,30 +123,22 @@ LIB_SUNDIALS = -L$(SUNDIALS_LIB_DIR) -l:libsundials_kinsol.a -l:libsundials_nvec
 LIB_MINPACK  = -L$(MINPACK_LIB_DIR) -l:libcminpack.a
 LIB_STD      = -lstdc++ -lm
 LIB_COMMON   = $(LIB_SUNDIALS) $(LIB_MINPACK) $(LIB_STD)
-LIB_JMIAD    = -L$(JMI_LIB_DIR) -ljmi_cppad
-LIB_EXTRA_AD = -L$(JMI_LIB_DIR) -ljmi_algorithm_cppad -ljmi_solver_cppad
-ifdef IPOPT_HOME
-LIB_IPOPT := `PKG_CONFIG_PATH=$(IPOPT_HOME)/lib/pkgconfig pkg-config --libs ipopt`
-else
-LIB_IPOPT = 
-endif
+
 # For different targets
 LIBS_FMUME10 = -lfmi1_me -ldl $(LIBS_FMU_STD) $(LIB_COMMON)
 LIBS_FMUCS10 = -lfmi1_cs -lfmi1_me -ldl $(LIBS_FMU_STD) $(LIB_COMMON) -l:libsundials_cvode.a
 LIBS_FMU20   = -lfmi2 $(LIBS_FMU_STD) $(LIB_COMMON) -l:libsundials_cvode.a
-LIBS_IPOPT   = -L$(JMI_LIB_DIR) -lfmi $(LIB_JMIAD)   $(LIB_EXTRA_AD) $(LIB_IPOPT) $(LIB_SUNDIALS)
 LIBS_CEVAL   = $(LIBS_FMU_STD)
 
 # Include paths for compilation
-INCL_CPPAD = -I$(JMI_INC_DIR) -I$(CPPAD_INC_DIR) -I$(SUNDIALS_INC_DIR)
-INCL_NOCPPAD = -I$(RUNTIMELIBRARY_INC_DIR) -I$(STANDARD_HEADER_INC_DIR) $(EXT_INC_DIRS) -I$(SUNDIALS_INC_DIR)
+INCL = -I$(RUNTIMELIBRARY_INC_DIR) -I$(STANDARD_HEADER_INC_DIR) $(EXT_INC_DIRS) -I$(SUNDIALS_INC_DIR)
 
 # set variable to correct makefile (for recursive call in fmume/fmucs)
 MAKEFILE = $(lastword $(MAKEFILE_LIST))
 
 
 ceval:
-	$(MAKE) -f $(MAKEFILE) JMI_AD=JMI_AD_NONE ceval_
+	$(MAKE) -f $(MAKEFILE) ceval_
 
 ceval_: $(OBJS)
 	mkdir -p $(BINARY_BASE_DIR)
@@ -180,7 +147,7 @@ ceval_: $(OBJS)
 
 
 fmume10:
-	$(MAKE) -f $(MAKEFILE) JMI_AD=JMI_AD_NONE fmume10_
+	$(MAKE) -f $(MAKEFILE) fmume10_
 
 fmume10_: $(OBJS)
 	mkdir -p $(BINARY_DIR)
@@ -188,7 +155,7 @@ fmume10_: $(OBJS)
 	$(RM) $(OBJS)
 
 fmucs10:
-	$(MAKE) -f $(MAKEFILE) JMI_AD=JMI_AD_NONE fmucs10_
+	$(MAKE) -f $(MAKEFILE) fmucs10_
 
 fmucs10_: $(OBJS)
 	mkdir -p $(BINARY_DIR)
@@ -196,7 +163,7 @@ fmucs10_: $(OBJS)
 	$(RM) $(OBJS)
 
 fmume20:
-	$(MAKE) -f $(MAKEFILE) JMI_AD=JMI_AD_NONE FMU_TYPES+=-DFMUME20 fmume20_
+	$(MAKE) -f $(MAKEFILE) FMU_TYPES+=-DFMUME20 fmume20_
 
 fmume20_: $(OBJS)
 	mkdir -p $(BINARY_DIR)
@@ -204,7 +171,7 @@ fmume20_: $(OBJS)
 	$(RM) $(OBJS)
 	
 fmucs20:
-	$(MAKE) -f $(MAKEFILE) JMI_AD=JMI_AD_NONE FMU_TYPES+=-DFMUCS20 fmucs20_
+	$(MAKE) -f $(MAKEFILE) FMU_TYPES+=-DFMUCS20 fmucs20_
 	
 fmucs20_: $(OBJS)
 	mkdir -p $(BINARY_DIR)
@@ -212,7 +179,7 @@ fmucs20_: $(OBJS)
 	$(RM) $(OBJS)
 	
 fmumecs20:
-	$(MAKE) -f $(MAKEFILE) JMI_AD=JMI_AD_NONE FMU_TYPES+=-DFMUME20 FMU_TYPES+=-DFMUCS20 fmucs20_
+	$(MAKE) -f $(MAKEFILE) FMU_TYPES+=-DFMUME20 FMU_TYPES+=-DFMUCS20 fmucs20_
 	
 fmumecs20_: $(OBJS)
 	mkdir -p $(BINARY_DIR)
@@ -220,33 +187,10 @@ fmumecs20_: $(OBJS)
 	$(RM) $(OBJS)
 
 
-jmu: $(OBJS)
-# This is to ensure that the contents of libjmi_algorithm_cppad and
-# libjmi_solver_cppade is included in the resulting shared object file.
-ifeq "$(wildcard .jmi_objs )" ""
-	mkdir .jmi_objs
-endif
-	mkdir -p $(BINARY_DIR)
-	cd .jmi_objs && $(AR) -x $(JMI_LIB_DIR)/libjmi_algorithm_cppad.a  && $(AR) -x $(JMI_LIB_DIR)/libjmi_solver_cppad.a  
-	$(CXX) $(SHARED_LDFLAGS) $(CXXLINKFLAGS) $(CXXFLAGS) -o $(SHARED) $(OBJS) ./.jmi_objs/*.o $(LIBS_IPOPT)
-	$(RM) .jmi_objs/*
-	rmdir .jmi_objs
-	$(RM) $(OBJS)
-
 # Compile
-%.o: sources/%.cpp
-ifeq ($(JMI_AD),JMI_AD_CPPAD)
-	$(CXX) $(CXXFLAGS) $(INCL_CPPAD) -c -o $@ $<
-else
-	$(CXX) $(CXXFLAGS) $(INCL_NOCPPAD) -c -o $@ $<
-endif
-
 %.o: sources/%.c
-ifeq ($(JMI_AD),JMI_AD_CPPAD)
-	$(CXX) $(CXXFLAGS) $(INCL_CPPAD) -c -o $@ $<
-else
-	$(CC) $(CFLAGS) $(INCL_NOCPPAD) -c -o $@ $<
-endif
+	$(CC) $(CFLAGS) $(INCL) -c -o $@ $<
+
 
 # Create a rule which uses the first item in arg as src name and
 # following items as additional CFLAGS. Argument "file:-O2:-d"
