--- a/RuntimeLibrary/Makefiles/Makefile.linux
+++ b/RuntimeLibrary/Makefiles/Makefile.linux
@@ -116,15 +116,15 @@ MINPACK_LIB_DIR = ${JMODELICA_HOME}/ThirdParty/Minpack/lib
 
 # Libraries necessary to link with jmi
 # Reused parts
-LIBS_FMU_STD = -ljmi "-L$(JMI_LIB_DIR)" $(EXT_LIB_DIRS) $(EXTERNAL_LIBS) -lModelicaExternalC -lzlib -ljmi
+LIBS_FMU_STD = -ljmi -ldl "-L$(JMI_LIB_DIR)" $(EXT_LIB_DIRS) $(EXTERNAL_LIBS) -lModelicaExternalC -lzlib -ljmi
 LIB_SUNDIALS = -L$(SUNDIALS_LIB_DIR) -l:libsundials_kinsol.a -l:libsundials_nvecserial.a
 LIB_MINPACK  = -L$(MINPACK_LIB_DIR) -l:libcminpack.a
 LIB_STD      = -lstdc++ -lm
 LIB_COMMON   = $(LIB_SUNDIALS) $(LIB_MINPACK) $(LIB_STD)
 
 # For different targets
-LIBS_FMUME10 = -lfmi1_me -ldl $(LIBS_FMU_STD) $(LIB_COMMON)
-LIBS_FMUCS10 = -lfmi1_cs -lfmi1_me -ldl $(LIBS_FMU_STD) $(LIB_COMMON) -l:libsundials_cvode.a
+LIBS_FMUME10 = -lfmi1_me $(LIBS_FMU_STD) $(LIB_COMMON)
+LIBS_FMUCS10 = -lfmi1_cs -lfmi1_me $(LIBS_FMU_STD) $(LIB_COMMON) -l:libsundials_cvode.a
 LIBS_FMU20   = -lfmi2 $(LIBS_FMU_STD) $(LIB_COMMON) -l:libsundials_cvode.a
 LIBS_CEVAL   = $(LIBS_FMU_STD)
 
