--- a/Makefile.in
+++ b/Makefile.in
@@ -185,6 +185,7 @@ NM = @NM@
 NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
+OPENMP_CFLAGS = @OPENMP_CFLAGS@
 OTOOL = @OTOOL@
 OTOOL64 = @OTOOL64@
 PACKAGE = @PACKAGE@
@@ -920,30 +921,30 @@ modelicacasadi_wrapper: $(MC_CASADI_BUILD)/bin/ModelicaCompiler.jar $(OC_CASADI_
 
 build-python-packages:
 
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_TRUE@	mkdir -p $(assimulo_build_dir); \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_TRUE@	cd $(abs_top_srcdir)/external; \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_TRUE@	find Assimulo -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(assimulo_build_dir); \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_TRUE@	cd $(assimulo_build_dir)/Assimulo; \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_TRUE@	case $(build) in \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_TRUE@	*-cygwin*) \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_TRUE@	python setup.py install --with_openmp=True --superlu-home=$(abs_builddir)/superlu_build/ --sundials-home=$(SUNDIALS_HOME) --sundials-with-superlu=True --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --force-32bit="true" --extra-c-flags="-mincoming-stack-boundary=2" --prefix=$(assimulo_install_dir) ;; \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_TRUE@	*-mingw*) \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_TRUE@	python setup.py install --with_openmp=True --superlu-home=$(abs_builddir)/superlu_build/ --sundials-home=$(SUNDIALS_HOME) --sundials-with-superlu=True --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --force-32bit="true" $(NUMPY_NO_MSVCR_ARG) --extra-c-flags="-mincoming-stack-boundary=2" --prefix=$(assimulo_install_dir) ;; \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_TRUE@	*) \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_TRUE@	python setup.py install --with_openmp=True --superlu-home=$(abs_builddir)/superlu_build/ --sundials-home=$(SUNDIALS_HOME) --sundials-with-superlu=True --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --prefix=$(assimulo_install_dir) ;; \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_TRUE@	esac
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_FALSE@	mkdir -p $(assimulo_build_dir); \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_FALSE@	cd $(abs_top_srcdir)/external; \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_FALSE@	find Assimulo -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(assimulo_build_dir); \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_FALSE@	cd $(assimulo_build_dir)/Assimulo; \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_FALSE@	case $(build) in \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_FALSE@	*-cygwin*) \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_FALSE@	python setup.py install --sundials-home=$(SUNDIALS_HOME) --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --force-32bit="true" --extra-c-flags="-mincoming-stack-boundary=2" --prefix=$(assimulo_install_dir) ;; \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_FALSE@	*-mingw*) \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_FALSE@	python setup.py install --sundials-home=$(SUNDIALS_HOME) --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --force-32bit="true" $(NUMPY_NO_MSVCR_ARG) --extra-c-flags="-mincoming-stack-boundary=2" --prefix=$(assimulo_install_dir) ;; \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_FALSE@	*) \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_FALSE@	python setup.py install --sundials-home=$(SUNDIALS_HOME) --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --prefix=$(assimulo_install_dir) ;; \
-@WITH_SUNDIALS_TRUE@@WITH_SUPERLU_FALSE@	esac
+@WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	mkdir -p $(assimulo_build_dir); \
+@WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	cd $(abs_top_srcdir)/external; \
+@WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	find Assimulo -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(assimulo_build_dir); \
+@WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	cd $(assimulo_build_dir)/Assimulo; \
+@WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	case $(build) in \
+@WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	*-cygwin*) \
+@WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	python setup.py install --with_openmp=True --superlu-home=$(abs_builddir)/superlu_build/ --sundials-home=$(SUNDIALS_HOME) --sundials-with-superlu=True --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --force-32bit="true" --extra-c-flags="-mincoming-stack-boundary=2" --prefix=$(assimulo_install_dir) ;; \
+@WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	*-mingw*) \
+@WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	python setup.py install --with_openmp=True --superlu-home=$(abs_builddir)/superlu_build/ --sundials-home=$(SUNDIALS_HOME) --sundials-with-superlu=True --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --force-32bit="true" $(NUMPY_NO_MSVCR_ARG) --extra-c-flags="-mincoming-stack-boundary=2" --prefix=$(assimulo_install_dir) ;; \
+@WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	*) \
+@WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	python setup.py install --with_openmp=True --superlu-home=$(abs_builddir)/superlu_build/ --sundials-home=$(SUNDIALS_HOME) --sundials-with-superlu=True --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --prefix=$(assimulo_install_dir) ;; \
+@WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	esac
+@WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	mkdir -p $(assimulo_build_dir); \
+@WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	cd $(abs_top_srcdir)/external; \
+@WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	find Assimulo -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(assimulo_build_dir); \
+@WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	cd $(assimulo_build_dir)/Assimulo; \
+@WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	case $(build) in \
+@WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	*-cygwin*) \
+@WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	python setup.py install --sundials-home=$(SUNDIALS_HOME) --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --force-32bit="true" --extra-c-flags="-mincoming-stack-boundary=2" --prefix=$(assimulo_install_dir) ;; \
+@WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	*-mingw*) \
+@WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	python setup.py install --sundials-home=$(SUNDIALS_HOME) --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --force-32bit="true" $(NUMPY_NO_MSVCR_ARG) --extra-c-flags="-mincoming-stack-boundary=2" --prefix=$(assimulo_install_dir) ;; \
+@WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	*) \
+@WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	python setup.py install --sundials-home=$(SUNDIALS_HOME) --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --prefix=$(assimulo_install_dir) ;; \
+@WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	esac
 	cd $(abs_top_srcdir)/Python/src; \
 	python setup_pymodelica.py install --prefix=$(pymodelica_install_dir); \
 	rm -rf build
